# 2D-game

./: CMakeLists.txt  README.md
include/: game.h  ghost.h  move.h  playermovement.h
src/: game.cpp  ghost.cpp  googletest.cpp  main.cpp  move.cpp  playermovement.cpp
test/: googletest.cpp
